samples/_failures_safe/1761454395_264367_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4921c2c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e4921c2c.c:135:9: error: expected ‘;’ at end of input
  135 |     free
      |         ^
      |         ;
./samples/SAFE/__tmp_e4921c2c.c:135:5: error: expected declaration or statement at end of input
  135 |     free
      |     ^~~~
